[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "saju-vercel-server"
version = "0.1.0"
description = "FastAPI Saju server with a manseryeok service engine and sajupy validator"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi>=0.115,<1.0",
  "quickjs>=1.19,<2.0",
  "sajupy==0.2.0",
]

[project.scripts]
app = "saju_server.api:app"

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1.0",
  "pytest>=8.3,<9.0",
  "uvicorn>=0.30,<1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["saju_server*"]

[tool.vercel.scripts]
build = "npm install && npm run build:bridge"
